crates/rpstate-macros/tests/fails/lookup_deep_error.stderr
error[E0599]: no method named `__schema_field_wrong` found for struct `ReadOnly<Inner>` in the current scope
  --> tests/fails/lookup_deep_error.rs:15:1
   |
15 | #[rpstate(prefix = "ui")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `rpstate` (in Nightly builds, run with -Z macro-backtrace for more info)
